# intervals

./: README.md  pyproject.toml  readme.ipynb
.github/workflows/: ci.yml  codecov.yml
docs/: index.md  install.md
intervals/: __init__.py  arithmetic.py  complex.py  methods.py  number.py  plotting.py  random.py
tests/: interval_generator.py  test_methods.py  test_number.py
